--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,5 +1,10 @@
 @media screen and (min-width: 500px) {
 
+    header {
+        display: flex;
+        justify-content: center;        
+    }
+
     nav {
         flex-direction: row;
         justify-content: space-around;
